--- a/articletype.html
+++ b/articletype.html
@@ -18,5 +18,38 @@
         </ul>
       </nav>
     </header>
+    <main>
+        <section class="category">
+            <div class="catTitle">
+                <h1>clothing</h1>
+                <h2><a href="category.html">view all</a></h2></div>
+            <div class="carousel">
+                <article class="saleItem">
+                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
+                    <div class="specItem">
+                        <div class="detailItem">
+                        <h3>zaino</h3>
+                        <p>price</p>
+                        </div>
+                        <p>discover more</p>
+                    </div>
+                </article>
+                <article class="saleItem">
+                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
+                    <h3>zaino</h3>
+                    <p>price</p>
+                    <p>discover more</p>
+                </article>
+                <article class="saleItem">
+                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
+                    <h3>zaino</h3>
+                    <p>price</p>
+                    <p>discover more</p>
+                </article>
+
+            </div>
+
+        </section>
+    </main>
   </body>
 </html>
