category page with 3 category

--- a/articletype.html
+++ b/articletype.html
@@ -22,31 +22,110 @@
         <section class="category">
             <div class="catTitle">
                 <h1>clothing</h1>
-                <h2><a href="category.html">view all</a></h2></div>
+                <h2><a href="category.html">view all</a></h2>
+            </div>
             <div class="carousel">
                 <article class="saleItem">
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
-                        <h3>zaino</h3>
-                        <p>price</p>
+                        <h3><strong>zaino</strong> </h3>
+                        <h3>400,00kr</h3>
                         </div>
-                        <p>discover more</p>
                     </div>
                 </article>
                 <article class="saleItem">
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
-                    <h3>zaino</h3>
-                    <p>price</p>
-                    <p>discover more</p>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
                 </article>
                 <article class="saleItem">
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey">
-                    <h3>zaino</h3>
-                    <p>price</p>
-                    <p>discover more</p>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
                 </article>
+            </div>
 
+        </section>
+
+        <section class="category">
+            <div class="catTitle">
+                <h1>clothing</h1>
+                <h2><a href="category.html">view all</a></h2>
+            </div>
+            <div class="carousel">
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                        <h3><strong>zaino</strong> </h3>
+                        <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+        </section>
+
+        <section class="category">
+            <div class="catTitle">
+                <h1>clothing</h1>
+                <h2><a href="category.html">view all</a></h2>
+            </div>
+            <div class="carousel">
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                        <h3><strong>zaino</strong> </h3>
+                        <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="saleItem">
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <div class="specItem">
+                        <div class="detailItem">
+                            <h3><strong>zaino</strong> </h3>
+                            <h3>400,00kr</h3>
+                        </div>
+                    </div>
+                </article>
             </div>
 
         </section>
