--- a/articletype.html
+++ b/articletype.html
@@ -10,23 +10,29 @@
   <body>
     <header>
       <nav class="mainNav">
-        <div class="logo"><h1>logo</h1></div>
+        <div class="logo"><img src="/links/theme3_logo_icon.png" ></div>
         <ul class="primaryLink">
           <li><a href="#">MAN</a></li>
           <li><a href="category.html"><b>WOMAN</a></b></li>
           <li><a href="#">KID</a></li>
         </ul>
+        <ul class="secLink">
+            <li><a href="#">Brand</a></li>
+            <li><a href="category.html"><b>Article type</a></b></li>
+            <li><a href="#">Season</a></li>
+          </ul>
       </nav>
+        
     </header>
     <main>
         <section class="category">
             <div class="catTitle">
                 <h1>clothing</h1>
-                <h2><a href="category.html">view all</a></h2>
+                <h2><a href="category.html">View all</a></h2>
             </div>
             <div class="carousel">
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                         <h3><strong>zaino</strong> </h3>
@@ -35,7 +41,7 @@
                     </div>
                 </article>
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10023.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                             <h3><strong>zaino</strong> </h3>
@@ -44,7 +50,7 @@
                     </div>
                 </article>
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10054.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                             <h3><strong>zaino</strong> </h3>
@@ -53,17 +59,17 @@
                     </div>
                 </article>
             </div>
-
+            <div class="viewMore"><h1><a href="category.html">&#8594;</a></h1></div>
         </section>
 
         <section class="category">
             <div class="catTitle">
-                <h1>clothing</h1>
-                <h2><a href="category.html">view all</a></h2>
+                <h1>accesories</h1>
+                <h2><a href="category.html">View all</a></h2>
             </div>
             <div class="carousel">
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10023.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                         <h3><strong>zaino</strong> </h3>
@@ -90,13 +96,13 @@
                     </div>
                 </article>
             </div>
-
+            <div class="viewMore"><h1><a href="category.html">&#8594;</a></h1></div>
         </section>
 
         <section class="category">
             <div class="catTitle">
-                <h1>clothing</h1>
-                <h2><a href="category.html">view all</a></h2>
+                <h1>shoes</h1>
+                <h2><a href="category.html">View all</a></h2>
             </div>
             <div class="carousel">
                 <article class="saleItem">
@@ -127,8 +133,9 @@
                     </div>
                 </article>
             </div>
-
+            <div class="viewMore"><h1><a href="category.html">&#8594;</a></h1></div>
         </section>
     </main>
   </body>
+  <footer><p>All images are from <a href="https://www.kaggle.com/paramaggarwal/fashion-product-images-dataset">KAGGLE</a></p></footer>
 </html>
