product list + sold out and discount

--- a/articleGallery.html
+++ b/articleGallery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Articletype</title>
+    <title>Articles</title>
     <link rel="stylesheet" href="gallery.css" />
     <link rel="stylesheet" href="base.css" />
   </head>
@@ -18,7 +18,7 @@
         </ul>
         <ul class="secLink">
             <li><a href="#">Brand</a></li>
-            <li><a href="category.html"><b>Article type</a></b></li>
+            <li><a href="category.html"><b>Articles</a></b></li>
             <li><a href="#">Season</a></li>
           </ul>
       </nav>
@@ -27,14 +27,17 @@
         <div class="pagTitle">
             <h1>clothing</h1>
         </div>
-        <section class="itemsGallery">
-                <article class="saleItem">
+        <section class="productList">
+                <article class="saleItem soldOut onSale">
                     <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                         <h3><strong>zaino</strong> </h3>
-                        <h3>400,00kr</h3>
+                        <h3><del>400,00 kr</del></h3>
                         </div>
+                        <div class="discounted">
+                            <h3><span><strong>-34% </strong></span>360,00 kr </h3>
+                          </div>
                     </div>
                 </article>
 
