--- a/productPage.html
+++ b/productPage.html
@@ -27,12 +27,12 @@
         <div class="pagTitle">
             <h2> <a href="/articleGallery.html">CLOTHING</a></h2>
         </div>
-        <section class="product">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+        <section>
+                    <div class="productImg"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></div>
                         <div class="infoItem">
                         <h1 class="pagTitle">zaino</h1>
-                        <h2>BRAND NAME</h2>
-                        <h3>400,00 kr</h3>
+                        <h2>400,00 kr</h2>
+                        <h3>BRAND NAME</h3>
                         <p>Colour: Blu</p>
                         <p>inventory number: 1234</p>
                         <p>choose size</p>
