--- a/articletype.html
+++ b/articletype.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="secLink">
             <li><a href="#">Brand</a></li>
-            <li><a href="category.html"><b>Article type</a></b></li>
+            <li><a href="articletype.html"><b>Article type</a></b></li>
             <li><a href="#">Season</a></li>
           </ul>
       </nav>
@@ -28,11 +28,11 @@
         <section class="category">
             <div class="catTitle">
                 <h1>clothing</h1>
-                <h2><a href="category.html">View all</a></h2>
+                <h2><a href="articleGallery.html">View all</a></h2>
             </div>
             <div class="carousel">
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="productPage.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                         <h3><strong>zaino</strong> </h3>
@@ -41,7 +41,7 @@
                     </div>
                 </article>
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10023.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="productPage.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10023.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                             <h3><strong>zaino</strong> </h3>
@@ -50,7 +50,7 @@
                     </div>
                 </article>
                 <article class="saleItem">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10054.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="productPage.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10054.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                             <h3><strong>zaino</strong> </h3>
@@ -59,7 +59,7 @@
                     </div>
                 </article>
             </div>
-            <div class="viewMore"><h1><a href="category.html">&#8594;</a></h1></div>
+            <div class="viewMore"><h1><a href="articleGallery.html">&#8594;</a></h1></div>
         </section>
 
         <section class="category">
