--- a/productPage.html
+++ b/productPage.html
@@ -18,25 +18,36 @@
         </ul>
         <ul class="secLink">
             <li><a href="#">Brand</a></li>
-            <li><a href="category.html"><b>Articles</a></b></li>
+            <li><a href="articletype.html"><b>Articles</a></b></li>
             <li><a href="#">Season</a></li>
           </ul>
       </nav>
     </header>
     <main>
-        <div class="pagTitle">
-            <h2> <a href="/articleGallery.html">CLOTHING</a></h2>
-        </div>
+        
         <section>
+          <div class="pagTitle">
+          <h2> <a href="/articleGallery.html">CLOTHING</a></h2>
+          <h1> <a href="/articleGallery.html">&#8592;</a></h1>
+        </div>
                     <div class="productImg"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></div>
                         <div class="infoItem">
                         <h1 class="pagTitle">zaino</h1>
                         <h2>400,00 kr</h2>
                         <h3>BRAND NAME</h3>
                         <p>Colour: Blu</p>
-                        <p>inventory number: 1234</p>
-                        <p>choose size</p>
-                        <button>add to basket</button>
+                        <p>Inventory number: 1234</p>
+                        <form>
+                          <label><p>Choose a size</p>
+                            <select name="size">
+                              <option>S</option>
+                              <option>M</option>
+                              <option>L</option>
+                              <option>XL</option>
+                            </select>
+                          </label>
+                        </form>
+                        <button><p>ADD TO SHOPPING BAG</p></button>
                         </div>
         </section>
 
