--- a/articleGallery.html
+++ b/articleGallery.html
@@ -13,12 +13,12 @@
         <div class="logo"><img src="/links/theme3_logo_icon.png" ></div>
         <ul class="primaryLink">
           <li><a href="#">MAN</a></li>
-          <li><a href="category.html"><b>WOMAN</a></b></li>
+          <li><a href="articleGallery.html"><b>WOMAN</a></b></li>
           <li><a href="#">KID</a></li>
         </ul>
         <ul class="secLink">
             <li><a href="#">Brand</a></li>
-            <li><a href="category.html"><b>Articles</a></b></li>
+            <li><a href="articletype.html"><b>Articles</a></b></li>
             <li><a href="#">Season</a></li>
           </ul>
       </nav>
@@ -29,7 +29,7 @@
         </div>
         <section class="productList">
                 <article class="saleItem soldOut onSale">
-                    <a href="category.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
+                    <a href="productPage.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/10000.webp" alt="Blue T20 Indian Cricket Jersey"></a>
                     <div class="specItem">
                         <div class="detailItem">
                         <h3><strong>zaino</strong> </h3>
