--- a/productPage.html
+++ b/productPage.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav class="mainNav">
-        <div class="logo"><img src="/links/theme3_logo_icon.png" ></div>
+        <div class="logo"><h6>REPOST IMAGES</h6></div>
         <ul class="primaryLink">
           <li><a href="#">MAN</a></li>
           <li><a href="category.html"><b>WOMAN</a></b></li>
