nav working on product page

--- a/productPage.html
+++ b/productPage.html
@@ -16,12 +16,15 @@
           <li><a href="category.html"><b>WOMAN</a></b></li>
           <li><a href="#">KID</a></li>
         </ul>
-        <ul class="secLink">
-            <li><a href="#">Brand</a></li>
-            <li><a href="articletype.html"><b>Articles</a></b></li>
-            <li><a href="#">Season</a></li>
-          </ul>
       </nav>
+      <nav class="secNav">
+        <ul class="secLink">
+          <li><a href="#">Brand</a></li>
+          <li><a href="articletype.html"><b>Articles</a></b></li>
+          <li><a href="#">Season</a></li>
+        </ul>
+      </nav>
+       
     </header>
     <main>
         
