--- a/articleGallery.html
+++ b/articleGallery.html
@@ -9,20 +9,23 @@
   </head>
   <body>
     <header>
-      <nav class="mainNav">
-        <div class="logo"><img src="/links/theme3_logo_icon.png" ></div>
-        <ul class="primaryLink">
-          <li><a href="#">MAN</a></li>
-          <li><a href="articleGallery.html"><b>WOMAN</a></b></li>
-          <li><a href="#">KID</a></li>
-        </ul>
-        <ul class="secLink">
+        <nav class="mainNav">
+          <div class="logo"><h6>REPOST IMAGES</h6></div>
+          <ul class="primaryLink">
+            <li><a href="#">MAN</a></li>
+            <li><a href="category.html"><b>WOMAN</a></b></li>
+            <li><a href="#">KID</a></li>
+          </ul>
+        </nav>
+        <nav class="secNav">
+          <ul class="secLink">
             <li><a href="#">Brand</a></li>
             <li><a href="articletype.html"><b>Articles</a></b></li>
             <li><a href="#">Season</a></li>
           </ul>
-      </nav>
-    </header>
+        </nav>
+         
+      </header>
     <main>
         <div class="pagTitle">
             <h1>clothing</h1>
